# memecache

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  mainthread.cpp
.github/workflows/: cmake.yml
.github/workspace/docs/: README.md
include/: cache.hpp  cache_policy.hpp  fifo_cache_policy.hpp  lifo_cache_policy.hpp  lru_cache_policy.hpp
